cmake_minimum_required(VERSION 3.15)

project(${UT_NAME} CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_EXTENSIONS FALSE)

include(FetchContent)
FetchContent_Declare(
  googletest
  # Specify the commit you depend on and update it regularly.
  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_subdirectory(../libraries build)

add_executable($ENV{EXE_NAME} unittest_random_generator.cpp)

target_include_directories($ENV{EXE_NAME}
  PRIVATE
    rg_utilities
)

target_link_libraries($ENV{EXE_NAME}
  PRIVATE
    GTest::gtest_main
    rg_utilities
)

include(GoogleTest)
gtest_discover_tests(unittest_random_generator)
# add_test(NAME test1 COMMAND $ENV{EXE_NAME})



